--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>BOOK WORM - TOP 25 BOOKS OF ALL TIME</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body style="background-color:darkblue;">
         <div id="heading"><h1 id="title" style="color:blanchedalmond;font-weight: lighter;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: 60px;" align="center">'BOOK WORM'</h1></div>
